# hemp

./: .gitignore  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  README.autotools  README.cmake  TODO  aclocal.m4  configure  configure.ac  hempify_config.pl  libtool
cmake/: FindReadLine.cmake  HempModule.cmake  MaintainerMode.cmake  TestProgram.cmake
extra/libltdl/: Makefile.in
include/: CMakeLists.txt  Makefile.am  Makefile.in  config.h  config.h.in  hemp.h  tap.h
include/hemp/: action.h  cache.h  codec.h  config.h  config.h.in  context.h  core.h  cstr.h  debug.h  defaults.h  defines.h  dialect.h  document.h  documents.h  element.h  elements.h  error.h  factory.h  filesystem.h  fragment.h  fragments.h  frame.h  global.h  grammar.h  hash.h  hub.h  language.h  library.h  list.h  macros.h  memory.h  module.h  namespace.h  os.h  params.h  parser.h  pool.h  proto.h  ptree.h  scanner.h  (+23 more)
include/hemp/language/: hemp.h  json.h  test.h  tt3.h
include/hemp/os/: unix.h  win32.h
include/hemp/scheme/: file.h  text.h
include/hemp/type/: code.h  hash.h  list.h  number.h  params.h  string.h  text.h
language/perl/: Hemp.xs  Makefile.PL  README  typemap  types.c  types.h
language/perl/lib/: Hemp.pm
language/perl/t/: hemp.t
lib/: Makefile.am  Makefile.in  debug.c  dialect.c  elements.c  filesystem.c  list.c  memory.c  pool.c  ptree.c
lib/element/: dquote.c  integer.c  number.c  squote.c
lib/tag/: control.c  inline.c
modules/: Makefile.am  Makefile.in  foo.c
modules/codec/: CMakeLists.txt  uri.c
modules/factory/: CMakeLists.txt  codec.c  dialect.c  element.c  feature.c  grammar.c  language.c  scheme.c  tag.c  viewer.c
modules/feature/: CMakeLists.txt  ansi.c
modules/language/: CMakeLists.txt  json.c  test.c
programs/: CMakeLists.txt  Makefile.am  Makefile.in  hemp.c
source/: Makefile.am  Makefile.in  cstr.c  debug.c  dialect.c  element.c  elements.c  hash.c  hemp.c  hemp_obj.c  hemp_test.c  list.c  memory.c  module.c  pool.c  ptree.c  scanner.c  slab.c  sources.c  tags.c  template.c  test.c  text.c  utils.c
source/element/: block.c  dquote.c  integer.c  literal.c  number.c  space.c  squote.c  text.c  word.c
source/tag/: comment.c  embed.c  inline.c
source/type/: number.c
src/: Makefile.am  Makefile.in
swig/: README
swig/perl5/: INSTALL  Makefile.PL  README  hemp.i  mkswig
swig/perl5/t/: hemp.t
tests/: Makefile.am  Makefile.in  action.c  benchmark.c  cstr.c  debug.c  dialect.c  element.c  elements.c  error.c  factory.c  filesystem.c  grammar.c  hash.c  hemp.c  hub.c  language.c  list.c  memory.c  memtrace.c  module.c  pool.c  ptree.c  scanner.c  slab.c  source.c  sources.c  tag.c  tagset.c  tagval.c  tap.c  template.c  test1.c  tests.c  text.c  tt3.c  type.c  utils.c  value.c
tests/.deps/: test1.Po
tests/core/: CMakeLists.txt  Makefile.am  Makefile.in  action.c  cache.c  codec.c  context.c  cstr.c  dialect.c  document.c  documents.c  element.c  elements.c  error.c  factory.c  filesystem.c  fragment.c  fragments.c  grammar.c  hash.c  hemp.c  list.c  memory.c  module.c  namespace.c  params.c  parser.c  pool.c  proto.c  ptree.c  slab.c  source.c  stack.c  string.c  tag.c  tagset.c  template.c  text.c  type.c  uri.c  (+5 more)
tests/data/: config1.json  file1
tests/language/: Makefile.am  Makefile.in
tests/language/hemp/: CMakeLists.txt  Makefile.am  Makefile.in  assign.c  boolops.c  comments.c  each.c  functions.c  hash.c  hashes.c  if.c  just.c  lists.c  nested.c  numbers.c  numops.c  parens.c  quotes.c  textops.c  unplugged.c  with.c  words.c
tests/language/json/: Makefile.am  Makefile.in  unplugged  unplugged.c
tests/language/test/: 00_load.c  CMakeLists.txt  Makefile.am  Makefile.in  test1.c
tests/scripts/: README  assign  boolops  comments  functions  hash  hello  lists  nested  numbers  numops  parens  quotes  test1  textops  unplugged  words
tests/scripts/command/: each  if  just  with
tests/type/: CMakeLists.txt  Makefile.am  Makefile.in  code.c  hash.c  list.c  params.c  text.c
