include_HEADERS         = hemp.h
nobase_include_HEADERS  = hemp/cstr.h           \
                          hemp/debug.h          \
                          hemp/cstr.h           \
                          hemp/debug.h          \
                          hemp/defaults.h       \
                          hemp/dialect.h        \
                          hemp/element.h        \
                          hemp/elements.h       \
                          hemp/error.h          \
                          hemp/filesystem.h     \
                          hemp/hash.h           \
                          hemp/list.h           \
                          hemp/memory.h         \
                          hemp/module.h         \
                          hemp/os               \
                          hemp/os.h             \
                          hemp/pool.h           \
                          hemp/ptree.h          \
                          hemp/scanner.h        \
                          hemp/scope.h          \
                          hemp/slab.h           \
                          hemp/sources.h        \
                          hemp/tags.h           \
                          hemp/template.h       \
                          hemp/text.h           \
                          hemp/type             \
                          hemp/type.h           \
                          hemp/types.h          \
                          hemp/utils.h          \
                          hemp/value.h
