include_HEADERS         = hemp.h
nobase_include_HEADERS  = hemp/config.h         \
                          hemp/core.h           \
                          hemp/debug.h          \
                          hemp/debug.h          \
                          hemp/defines.h        \
                          hemp/dialect.h        \
                          hemp/element.h        \
                          hemp/elements.h       \
                          hemp/error.h          \
                          hemp/filesystem.h     \
                          hemp/hash.h           \
                          hemp/list.h           \
                          hemp/memory.h         \
                          hemp/module.h         \
                          hemp/os.h             \
                          hemp/os/unix.h        \
                          hemp/os/win32.h       \
                          hemp/pool.h           \
                          hemp/ptree.h          \
                          hemp/scanner.h        \
                          hemp/scheme.h         \
                          hemp/scope.h          \
                          hemp/slab.h           \
                          hemp/source.h         \
                          hemp/tag.h            \
                          hemp/tagset.h         \
                          hemp/template.h       \
                          hemp/text.h           \
                          hemp/type.h           \
                          hemp/type/number.h    \
                          hemp/type/string.h    \
                          hemp/types.h          \
                          hemp/utils.h          \
                          hemp/value.h
