lib_LTLIBRARIES     = libhemp.la
libhemp_la_SOURCES  = cstr.c                \
                      dialect.c             \
                      debug.c               \
                      element.c             \
                      elements.c            \
                      element/block.c       \
                      element/dquote.c      \
                      element/integer.c     \
                      element/literal.c     \
                      element/number.c      \
                      element/space.c       \
                      element/squote.c      \
                      element/text.c        \
                      element/word.c        \
                      filesystem.c          \
                      hash.c                \
                      hemp_obj.c            \
                      list.c                \
                      memory.c              \
                      module.c              \
                      pool.c                \
                      ptree.c               \
                      scanner.c             \
                      slab.c                \
                      sources.c             \
                      tags.c                \
                      tag/comment.c         \
                      tag/control.c         \
                      tag/embed.c           \
                      tag/inline.c          \
                      tag/outline.c         \
                      tag/variable.c        \
                      text.c                \
                      template.c            \
                      utils.c

